--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/Kelorofil1@2x 1.png" class="d-block w-100" alt="...">
+            <img src="img/Kelorofil1@2x 1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/Kelorofil2@2x 1.png" class="d-block w-100" alt="...">
+            <img src="img/Kelorofil2@2x 1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/Kelorofil3@2x 1.png" class="d-block w-100" alt="...">
+            <img src="img/Kelorofil3@2x 1.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
@@ -77,13 +77,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/Body.png" class="d-block w-100" alt="...">
+            <img src="img/Body.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/Hero Bahan 2.png" class="d-block w-100" alt="...">
+            <img src="img/Hero Bahan 2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/Hero Bahan 3.png" class="d-block w-100" alt="...">
+            <img src="img/Hero Bahan 3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
       </div>
@@ -97,13 +97,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/Prodcut.png" class="d-block w-100" alt="...">
+            <img src="img/Prodcut.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/Product 2.png" class="d-block w-100" alt="...">
+            <img src="img/Product 2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/Product 3.png" class="d-block w-100" alt="...">
+            <img src="img/Product 3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         </div>
