--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive coffee website design tutorial</title>
+    <title>Kelorofil</title>
 
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
@@ -23,7 +23,7 @@
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"> coffee <i class="fas fa-mug-hot"></i> </a>
+    <a href="#" class="logo"> Kelorofil <i class="fas fa-mug-hot"></i> </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
@@ -46,7 +46,8 @@
     <div class="row">
 
         <div class="content">
-            <h3>fresh coffee in the morning</h3>
+            <h3>Sejut Manfaat Kelor</h3>
+            <h3>Sejuta Manfaat Orang Melupakannya</h3>
             <a href="#" class="btn">buy one now</a>
         </div>
 
