--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="content">
             <h3>Sejut Manfaat Kelor</h3>
-            <p>Sejuta Manfaat Orang Melupakannya</p>
+            <h3>Sejuta Manfaat Orang Melupakannya</h3>
             <a href="#" class="btn">buy one now</a>
         </div>
 
