--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
-    <a href="#" class="logo"> Kelorofil <i class="fas fa-mug-hot"></i> </a>
+    <a href="#" class="logo"> Kelorofil <i class="fas fa-leaf"></i> </a>
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#about">about</a>
-        <a href="#menu">menu</a>
-        <a href="#review">review</a>
-        <a href="#book">book</a>
+        <a href="#about">Tentang</a>
+        <a href="#menu">Menu</a>
+        <a href="#review">Produk</a>
+        <a href="#book">Artikel</a>
     </nav>
 
-    <a href="#" class="btn">book a table</a>
+    <a href="#" class="btn">Selengkapnya</a>
 
 </header>
 
@@ -48,19 +48,19 @@
         <div class="content">
             <h3>Sejut Manfaat Kelor</h3>
             <h3>Sejuta Manfaat Orang Melupakannya</h3>
-            <a href="#" class="btn">buy one now</a>
+            <a href="#" class="btn">Selengkapnya</a>
         </div>
 
         <div class="image">
-            <img src="image/home-img-1.png" class="main-home-image" alt="">
+            <img src="image/teh.png" class="main-home-image" alt="">
         </div>
 
     </div>
 
     <div class="image-slider">
-        <img src="image/home-img-1.png" alt="">
-        <img src="image/home-img-2.png" alt="">
-        <img src="image/home-img-3.png" alt="">
+        <img src="image/teh.png" alt="">
+        <img src="image/pudding.png" alt="">
+        <img src="image/bekel.png" alt="">
     </div>
 
 </section>
@@ -76,17 +76,17 @@
     <div class="row">
 
         <div class="image">
-            <img src="image/about-img.png" alt="">
+            <img src="image/ibu.jpg" alt="">
         </div>
 
         <div class="content">
-            <h3 class="title">what's make our coffee special!</h3>
+            <h3 class="title">Yang membuat kelorofil spesial</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse et commodi, ad, doloremque obcaecati maxime quam minima dolore mollitia saepe quos, debitis incidunt. Itaque possimus adipisci ipsam harum at autem.</p>
             <a href="#" class="btn">read more</a>
             <div class="icons-container">
                 <div class="icons">
-                    <img src="image/about-icon-1.png" alt="">
-                    <h3>quality coffee</h3>
+                    <img src="image/leaf.png" alt="">
+                    <h3>Kualitas Daun</h3>
                 </div>
                 <div class="icons">
                     <img src="image/about-icon-2.png" alt="">
@@ -107,7 +107,7 @@
 
 <!-- menu section starts  -->
 
-<section class="menu" id="menu">
+<!-- <section class="menu" id="menu">
 
     <h1 class="heading"> our menu <span>popular menu</span> </h1>
 
@@ -169,7 +169,7 @@
 
     </div>
 
-</section>
+</section> -->
 
 <!-- menu section ends -->
 
@@ -177,7 +177,7 @@
 
 <section class="review" id="review">
 
-    <h1 class="heading"> reviews <span>what people says</span> </h1>
+    <h1 class="heading"> Feedback <span>Pendapat Orang Tentang Kelor</span> </h1>
 
     <div class="swiper review-slider">
 
@@ -261,7 +261,7 @@
 
 <section class="book" id="book">
 
-    <h1 class="heading"> booking <span>reserve a table</span> </h1>
+    <h1 class="heading"> Feedback <span>Kirim feedback terbaik anda</span> </h1>
 
     <form action="">
 
@@ -271,7 +271,7 @@
 
         <textarea name="" placeholder="your message" class="box" id="" cols="30" rows="10"></textarea>
 
-        <input type="submit" value="send message" class="btn">
+        <input type="submit" value="kirim pesan" class="btn">
 
     </form>
 
@@ -285,44 +285,44 @@
 
     <div class="box-container">
 
-        <div class="box">
-            <h3>our branches</h3>
+        <!-- <div class="box">
+            <h3>Cabang Kami</h3>
             <a href="#"> <i class="fas fa-arrow-right"></i> india </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> USA </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> france </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> africa </a>
             <a href="#"> <i class="fas fa-arrow-right"></i> Japan </a>
-        </div>
+        </div> -->
 
         <div class="box">
-            <h3>quick links</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i> home </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> about </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> menu </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> review </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> book </a>
+            <h3>Link Cepat</h3>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Home </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Tentang </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Menu </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Produk </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> Artikel </a>
         </div>
-
+<!-- 
         <div class="box">
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
             <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
             <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
             <a href="#"> <i class="fas fa-envelope"></i> mumbai, india = 400104 </a>
-        </div>
+        </div> -->
 
         <div class="box">
-            <h3>contact info</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
+            <h3>Kontak Info</h3>
+            <a href="Kelorofil"> <i class="fab fa-facebook-f"></i> facebook </a>
             <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
+            <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
+            <a href="@kelorofil_"> <i class="fab fa-instagram"></i> instagram </a>
             <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
         </div>
 
     </div>
 
-    <div class="credit"> creatd by <span>mr. web designer</span> | all rights reserved </div>
+    <div class="credit"> Dibuat Oleh <span>Kelorofil Team</span> | Pelopor Pemuda  </div>
 
 </section>
 
