--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar">
         <a href="#home">home</a>
         <a href="#about">Tentang</a>
-        <a href="#menu">Menu</a>
+        <!-- <a href="#menu">Menu</a> -->
         <a href="#review">Produk</a>
         <a href="#book">Artikel</a>
     </nav>
@@ -81,7 +81,11 @@
 
         <div class="content">
             <h3 class="title">Yang membuat kelorofil spesial</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse et commodi, ad, doloremque obcaecati maxime quam minima dolore mollitia saepe quos, debitis incidunt. Itaque possimus adipisci ipsam harum at autem.</p>
+            <p>  Antioksidan dapat melawan pengaruh bahaya radikal 
+                bebas atau ROS (Reactive Ocygen Species). Antioksidan 
+                     merupakan salah satu zat yang terkandung dalam 
+                        jumlah yang tinggi dalam daun kelor, sehingga 
+                        dapat menambah imunitas tubuh secara alami.</p>
             <a href="#" class="btn">read more</a>
             <div class="icons-container">
                 <div class="icons">
