--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <section class="about" id="about">
 
-    <h1 class="heading"> about us <span>why choose us</span> </h1>    
+    <h1 class="heading"> Tentang Kelor <span>Mengapa memilih kelor</span> </h1>    
 
     <div class="row">
 
