--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="row">
 
         <div class="content">
-            <h3>Sejut Manfaat Kelor</h3>
-            <h3>Sejuta Manfaat Orang Melupakannya</h3>
+            <h3>Sejuta Manfaat Kelor</h3>
+            <h3>Sejuta Orang Melupakannya</h3>
             <a href="#" class="btn">Selengkapnya</a>
         </div>
 
