--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
 <section class="review" id="review">
 
-    <h1 class="heading"> Feedback <span>Pendapat Orang Tentang Kelor</span> </h1>
+    <h1 class="heading"> Team <span>KELOROFIL</span> </h1>
 
     <div class="swiper review-slider">
 
@@ -190,67 +190,75 @@
             <div class="swiper-slide box">
                 <i class="fas fa-quote-left"></i>
                 <i class="fas fa-quote-right"></i>
-                <img src="image/pic-1.png" alt="">
+                <img src="image/Rafli.png" alt="">
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <span>Ketua Kelorofil</span>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aliquid eveniet qui, similique aut sit.</p>
-                <h3>john deo</h3>
-                <span>satisfied client</span>
+                <h3>Rafli</h3>
+                <span>Team Kelorofil</span>
+  
             </div>
 
             <div class="swiper-slide box">
                 <i class="fas fa-quote-left"></i>
                 <i class="fas fa-quote-right"></i>
-                <img src="image/pic-2.png" alt="">
+                <img src="image/Auliya.png" alt="">
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <span>Divisi Keuangan</span>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aliquid eveniet qui, similique aut sit.</p>
-                <h3>john deo</h3>
-                <span>satisfied client</span>
+                <h3>Auliya</h3>
+                <span>Team Kelorofil</span>
             </div>
 
             <div class="swiper-slide box">
                 <i class="fas fa-quote-left"></i>
                 <i class="fas fa-quote-right"></i>
-                <img src="image/pic-3.png" alt="">
+                <img src="image/Okta.png" alt="">
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <span>Divisi Gizi</span>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aliquid eveniet qui, similique aut sit.</p>
-                <h3>john deo</h3>
-                <span>satisfied client</span>
+                <h3>Okta</h3>
+                <span>Team Kelorofil</span>
             </div>
 
             <div class="swiper-slide box">
                 <i class="fas fa-quote-left"></i>
                 <i class="fas fa-quote-right"></i>
-                <img src="image/pic-4.png" alt="">
+                <img src="image/Nikmah.png" alt="">
                 <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
+                    <span>Divisi Administrasi</span>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aliquid eveniet qui, similique aut sit.</p>
-                <h3>john deo</h3>
-                <span>satisfied client</span>
+                <h3>Nikmah</h3>
+                <span>Team Kelorofil</span>
             </div>
 
+            <div class="swiper-slide box">
+                <i class="fas fa-quote-left"></i>
+                <i class="fas fa-quote-right"></i>
+                <img src="image/Reihan.png" alt="">
+                <div class="stars">
+                    <span>Divisi Lapangan</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aliquid eveniet qui, similique aut sit.</p>
+                <h3>Reihan</h3>
+                <span>Team Kelorofil</span>
+            </div>
+
+            <div class="swiper-slide box">
+                <i class="fas fa-quote-left"></i>
+                <i class="fas fa-quote-right"></i>
+                <img src="image/Hafizh.png" alt="">
+                <div class="stars">
+                    <span>Divisi IT</span>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aliquid eveniet qui, similique aut sit.</p>
+                <h3>Hafizh</h3>
+                <span>Team Kelorofil</span>
+            </div>
         </div>
 
         <div class="swiper-pagination"></div>
@@ -269,11 +277,11 @@
 
     <form action="">
 
-        <input type="text" placeholder="your name" class="box">
-        <input type="email" placeholder="your email" class="box">
-        <input type="number" placeholder="your number" class="box">
+        <input type="text" placeholder="nama" class="box">
+        <input type="email" placeholder="email" class="box">
+        <input type="number" placeholder="nomer" class="box">
 
-        <textarea name="" placeholder="your message" class="box" id="" cols="30" rows="10"></textarea>
+        <textarea name="" placeholder="pesan" class="box" id="" cols="30" rows="10"></textarea>
 
         <input type="submit" value="kirim pesan" class="btn">
 
