--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <a href="#" class="logo"> Kelorofil <i class="fas fa-leaf"></i> </a>
 
     <nav class="navbar">
-        <a href="#home">home</a>
+        <a href="#home">Home</a>
         <a href="#about">Tentang</a>
-        <!-- <a href="#menu">Menu</a> -->
+        <a href="#menu">Menu</a>
         <a href="#review">Produk</a>
         <a href="#book">Artikel</a>
     </nav>
@@ -86,19 +86,19 @@
                      merupakan salah satu zat yang terkandung dalam 
                         jumlah yang tinggi dalam daun kelor, sehingga 
                         dapat menambah imunitas tubuh secara alami.</p>
-            <a href="#" class="btn">read more</a>
+            <a href="#" class="btn">Selengkapnya</a>
             <div class="icons-container">
                 <div class="icons">
-                    <img src="image/leaf.png" alt="">
+                    <img src="image/green-tea.png" alt="">
+                    <h3>Manfaat Daun</h3>
+                </div>
+                <div class="icons">
+                    <img src="image/price-tag.png" alt="">
                     <h3>Kualitas Daun</h3>
                 </div>
                 <div class="icons">
-                    <img src="image/about-icon-2.png" alt="">
-                    <h3>our branches</h3>
-                </div>
-                <div class="icons">
-                    <img src="image/about-icon-3.png" alt="">
-                    <h3>free delivery</h3>
+                    <img src="image/open-box.png" alt="">
+                    <h3>Product Daun</h3>
                 </div>
             </div>
         </div>
@@ -111,69 +111,69 @@
 
 <!-- menu section starts  -->
 
-<!-- <section class="menu" id="menu">
+<section class="menu" id="menu">
 
-    <h1 class="heading"> our menu <span>popular menu</span> </h1>
+    <h1 class="heading"> Kelorofil <span>Produk Terbaik</span> </h1>
 
     <div class="box-container">
 
         <a href="#" class="box">
-            <img src="image/menu-1.png" alt="">
+            <img src="image/product1.png" alt="">
             <div class="content">
-                <h3>our special coffee</h3>
+                <h3>Latte Kelor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, id.</p>
-                <span>$8.99</span>
+                <span>Rp. 10.000</span>
             </div>
         </a>
 
         <a href="#" class="box">
-            <img src="image/menu-2.png" alt="">
+            <img src="image/Product2.png" alt="">
             <div class="content">
-                <h3>our special coffee</h3>
+                <h3>Dodol Betawi Kelor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, id.</p>
-                <span>$8.99</span>
+                <span>Rp. 12.000</span>
             </div>
         </a>
 
         <a href="#" class="box">
-            <img src="image/menu-3.png" alt="">
+            <img src="image/Product3.png" alt="">
             <div class="content">
-                <h3>our special coffee</h3>
+                <h3>Healtea Kelor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, id.</p>
-                <span>$8.99</span>
+                <span>Rp. 10.000</span>
             </div>
         </a>
 
         <a href="#" class="box">
-            <img src="image/menu-4.png" alt="">
+            <img src="image/Product4.png" alt="">
             <div class="content">
-                <h3>our special coffee</h3>
+                <h3>Cookie Kelor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, id.</p>
-                <span>$8.99</span>
+                <span>Rp. 15.000</span>
             </div>
         </a>
 
         <a href="#" class="box">
-            <img src="image/menu-5.png" alt="">
+            <img src="image/Product5.png" alt="">
             <div class="content">
-                <h3>our special coffee</h3>
+                <h3>Pudding Kelor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, id.</p>
-                <span>$8.99</span>
+                <span>Rp. 7.500</span>
             </div>
         </a>
 
         <a href="#" class="box">
-            <img src="image/menu-6.png" alt="">
+            <img src="image/Product6.png" alt="">
             <div class="content">
-                <h3>our special coffee</h3>
+                <h3>Brownies Kelor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, id.</p>
-                <span>$8.99</span>
+                <span>Rp. 10.000</span>
             </div>
         </a>
 
     </div>
 
-</section> -->
+</section>
 
 <!-- menu section ends -->
 
